feat: イベント参加情報の取得
