# internal/app/handler/schema/user.go
@@ -26,4 +26,30 @@ type GetMeOutput struct {
 	Message     string                 `json:"message"`
 	Skills      map[string]string      `json:"skills"`
 	URLs        map[entity.URLs]string `json:"urls"`
+	Events      []Event                `json:"events"`
+}
+
+type Event struct {
+	EventID    string `json:"event_id"`
+	OwnerID    string `json:"owner_id"`
+	Name       string `json:"name"`
+	StartedAt  string `json:"started_at"`
+	FinishedAt string `json:"finished_at"`
+	Message    string `json:"message"`
+	ImageURL   string `json:"image_url"`
+}
+
+type GetByIDInput struct {
+	UserID string `json:"user_id"`
+}
+
+type GetByIDOutput struct {
+	UserID      string                 `json:"user_id"`
+	Name        string                 `json:"name"`
+	IsOrganizer bool                   `json:"is_organizer"`
+	ImageURL    string                 `json:"image_url"`
+	Message     string                 `json:"message"`
+	Skills      map[string]string      `json:"skills"`
+	URLs        map[entity.URLs]string `json:"urls"`
+	Events      []Event                `json:"events"`
 }
